--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   border: 0.5px solid rgba(0, 0, 0, 0.1);
 }
 
+.staff:hover {
+  transform: translate(-3px, -3px);
+}
+
+.staff:active {
+  background-color: rgb(0,204,0);
+}
+
 .staff-info {
   padding: 25px;
   margin-top: 20px;
