--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.staff, .dept {
+.staff{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,28 +12,45 @@
   transform: translate(-3px, -3px);
 }
 
+.col-display {
+  float: right;
+}
 
-  .staff-info {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-  .staff-details {
-    padding-left: 50px;
-  }
-  
-  .staff-img {
-    padding-left: 180px;
-  }
+.breadcrumb {
+  margin-top: 10px;
+}
 
-  @media only screen and (max-width: 980) {
-  
-    .staff-img, .staff-details {
-      padding: 20px;
-    }
+.staff-info {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.staff-details {
+  padding-left: 50px;
+}
+
+.staff-img {
+  padding-left: 180px;
+}
+
+.dept {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 20px;
+  padding-top: 20px;
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 980) {
+
+  .staff-img, .staff-details {
+    padding: 20px;
   }
+}
 
 @media only screen and (max-width: 680px) {
   .staff-info {
@@ -59,5 +76,15 @@ select {
 
 .nav-bar {
   background-color: lightgreen;
+}
+
+.salary {
+  display: grid;
+  background-color: green;
+  width: 200px;
+  height: 40px;
+  place-items: center;
+  background: rgba(39, 174, 96, 0.5);
+  border-radius: 25px;
 }
 
