--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ select {
   color: #2c3e50;
 }
 
+
 .salary {
   display: grid;
   width: 200px;
@@ -95,3 +96,6 @@ select {
   border-radius: 25px;
 }
 
+.search-bar {
+  display: flex;
+}
