Assignment3 commit added addstaff and searchbar component

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   justify-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 20px;
-  border: 0.5px solid rgba(0, 0, 0, 0.1);
 }
 
 .staff:hover {
@@ -14,6 +13,7 @@
 
 .col-display {
   float: right;
+  margin-right: 40px;
 }
 
 .breadcrumb {
@@ -99,6 +99,15 @@ select {
 .search-bar {
   display: flex;
   float: right;
-  margin-top: -25px;
-  z-index: 1;
+  padding-top: 10px;
+  margin-right: 40px;
 }
+
+.add-staff {
+  display: flex;
+  float: right;
+  padding-top: 10px;
+  margin-right: 30px;
+}
+
+
